Revert " fix search result view on mobile - its no longer hidden (#38)"
This reverts commit 1b7c5a3dbfc391d20967b035a1ba3ca65237e950.

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -203,7 +203,7 @@ p.post-meta {font-size: 80%; color: #777;}
     position: absolute;
     top: 40px; /* if you change anything about the nav, you'll prob. need to reset the top and left values here.*/
     left: 20px;
-    z-index: 0 !important;
+    z-index: -1;
     width:223px;
     border-left: 1px solid #dedede;
 }
@@ -288,7 +288,6 @@ li.dropdownActive a {
 .navbar-inverse .navbar-nav > li > a {
     background-color: transparent;
     margin-top:10px;
-    z-index: -1;
 }
 
 .post-content .rssfeedLink {
@@ -712,7 +711,6 @@ ol.series li {
 /* not sure if using this ...*/
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: #248ec2 !important;
-    overflow: visible;
 }
 
 #mysidebar .nav ul {
